@@ -2,4 +2,5 @@ include README.rst
 include INSTALL.rst
 include COPYING.MIT
 include milk/tests/data/*
+recursive-include milk/supervised/eigen3 *
 
