@@ -1,0 +1,6 @@
+#!/usr/bin/env bash
+wget http://bitbucket.org/eigen/eigen/get/3.1.2.tar.bz2
+tar xjf 3.1.2.tar.bz2
+cd eigen-eigen-5097c01bcdc4
+cp -r Eigen ../milk/supervised/eigen3
+
